Fix header image

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 header {
-  background-image: linear-gradient(to left, transparent, #78C0E0 70%), url("/dataportal-docs/img/clouds3.jpg");
+  background-image: linear-gradient(to left, transparent, #78C0E0 70%), url("/img/clouds3.jpg");
   opacity: 0.7;
   background-position: right 0px top 20%;
   background-repeat: no-repeat;
