Fix header link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <body>
   {% if site.title and site.title != page.title %}
   <header class="global">
-    <div onclick="window.location = '/'" class="vertical-center portal-name">
+    <div onclick="window.location = 'https://cloudnet.fmi.fi/'" class="vertical-center portal-name">
       <h1>Cloudnet</h1>
       <span>data portal</span>
     </div>
