Fix header font

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,7 +27,9 @@ header {
   line-height: 1; }
   .portal-name > h1 {
     display: inline;
-    margin: 0; }
+    margin: 0;
+    font-weight: 400
+  }
   .portal-name > span {
     font-size: 0.8em;
     text-transform: uppercase;
