--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,20 @@ body {
   font-size: 1rem
 }
 
+.markdown-body {
+  max-inline-size: 80ch;
+}
+
+.markdown-body p {
+  margin-bottom: 8px;
+}
+.markdown-body h3 {
+  margin-bottom: 8px;
+}
+.markdown-body li > p {
+  margin-top: 12px;
+}
+
 header {
   background-image: linear-gradient(to left, transparent, #78C0E0 70%), url("/img/clouds3.jpg");
   opacity: 0.7;
