Adjust header padding

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <body>
   {% if site.title and site.title != page.title %}
   <header class="global">
-    <div class="container" id="header-content">
+    <div class="px-3" id="header-content">
       <a href="https://cloudnet.fmi.fi/" class="vertical-center portal-name">
         <img src="{{ "/img/header-logo.svg" | relative_url }}" alt="Cloudnet logo" class="logo">
       </a>
