--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,6 +41,9 @@ header {
 #header-content {
   display: flex;
   max-width: 80ch;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 
 .logo {
